--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -32,15 +32,15 @@
         <p:panelGrid columns="1" layout="grid" class="FormContent"
                      styleClass="Container100 Responsive100 liabilityCenterContent_uob"
                      style="border:0px !important; background:none;margin-bottom:10px; text-align: center;">
-            <p:selectOneRadio value="#{uobpb.dependent}" stytleclass="fltr">
+            <p:selectOneRadio value="#{uobpb.dependent}" id="uobdddependents" stytleclass="fltr">
                 <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="0" itemValue="0"/>
-                <f:selectItem itemLabel="1" itemValue="1"/>
-                <f:selectItem itemLabel="2" itemValue="2"/>
-                <f:selectItem itemLabel="3" itemValue="3"/>
-                <f:selectItem itemLabel="4" itemValue="4"/>
-                <f:selectItem itemLabel="5+" itemValue="5"/>
+                <f:selectItem id="uobddd0" itemLabel="0" itemValue="0"/>
+                <f:selectItem id="uobddd1" itemLabel="1" itemValue="1"/>
+                <f:selectItem id="uobddd2" itemLabel="2" itemValue="2"/>
+                <f:selectItem id="uobddd3" itemLabel="3" itemValue="3"/>
+                <f:selectItem id="uobddd4" itemLabel="4" itemValue="4"/>
+                <f:selectItem id="uobddd5" itemLabel="5+" itemValue="5"/>
             </p:selectOneRadio>
         </p:panelGrid>
 
@@ -48,7 +48,7 @@
             <div class="uobBoldText">Total Expenses</div>
             <div class="uobSubText">(Include your annual cost for Household, Family Expenses, Children’s Tuition, Mortgage, Holiday Travel and any other living cost)</div>
         </div>
-        <p:inputNumber value="#{uobpb.totalExpense}" placeholder="$"
+        <p:inputNumber value="#{uobpb.totalExpense}" placeholder="$" id="uobinputtexp"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
@@ -60,7 +60,7 @@
             <div class="uobBoldText">Total Debt</div>
             <div class="uobSubText">(Include your Car Payments, Credit Card bills etc.)</div>
         </div>
-        <p:inputNumber value="#{uobpb.totalLiability}" placeholder="$"
+        <p:inputNumber value="#{uobpb.totalLiability}" placeholder="$" id="uobinputtdebt"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
