--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
@@ -18,12 +18,12 @@
             <h5>
                 2. Do you have any other sources of income?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans4}"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans4}" id="uobddsoi"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
-                <f:selectItem itemLabel="Yes" itemValue="1" />
-                <f:selectItem itemLabel="No" itemValue="2" />
+                <f:selectItem id="soiyes" itemLabel="Yes" itemValue="1" />
+                <f:selectItem id="soino" itemLabel="No" itemValue="2" />
             </p:selectOneRadio>
         </div>
     </div>
