--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
@@ -18,13 +18,13 @@
             <h5>
                 6. What level of volatility are you prepared to accept?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}" id="uobq6rb"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
-                <f:selectItem itemLabel="More than 25%" itemValue="1" />
-                <f:selectItem itemLabel="Up to 25%" itemValue="2" />
-                <f:selectItem itemLabel="Up to 5%" itemValue="3" />
+                <f:selectItem id="q6rb1" itemLabel="More than 25%" itemValue="1" />
+                <f:selectItem id="q6rb2" itemLabel="Up to 25%" itemValue="2" />
+                <f:selectItem id="q6rb3" itemLabel="Up to 5%" itemValue="3" />
             </p:selectOneRadio>
         </div>
     </div>
