Prashant 04/17/2017 -Fix for BB finalPage

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -1,9 +1,9 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
+				xmlns:h="http://java.sun.com/jsf/html"
+				xmlns:f="http://java.sun.com/jsf/core"
+				xmlns:ui="http://java.sun.com/jsf/facelets"
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:pe="http://primefaces.org/ui/extensions">
 
 	<!-- BOX START -->
 
@@ -14,14 +14,6 @@
 					<p:panel id="fineTunePanel" styleClass="fineTuneBlock" style="display:none;">
 						<div class="Container100 FTLabel">
 							<span class="Fs16">Change Strategy</span>
-							<div class="Wid10 Fright closeFTbtn">
-								<p:commandButton type="button" styleClass="fineTuneBtn"
-									icon="fa fa-times">
-									<p:effect type="slide" event="click" for="fineTunePanel">
-										<f:param name="mode" value="'hide'" />
-									</p:effect>
-								</p:commandButton>
-							</div>
 						</div>
 						<div class="Fs13 fineTuneDetail">Rather than having a
 							strategy recommended to me based on my time horizon and risk
@@ -44,7 +36,7 @@
 									<p:slider id="allocSlider" for="allocValue" minValue="0"
 											  maxValue="#{tcmpb.maxAssetAllocatonPoints}" step="1">
 										<p:ajax event="slideEnd"
-												update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
+												update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea, :ceForm:tcmpnafportfoliodetails"
 												listener="#{tcmpb.onAllocSlider}" />
 									</p:slider>
 								</div>
@@ -52,11 +44,19 @@
 									Aggressive</div>
 								<div class="EmptyBox5"></div>
 								<div class="Container100 TexAlCenter">
+
 									<div class="ContainerIndent">
 										<p:commandButton id="allocSliderResetButton" value="Recommended"
-														 styleClass="uob_button"
-														 update=":ceForm:allocSlider, :ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
+														 styleClass="uob_button Fleft"
+														 update=":ceForm:allocSlider, :ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea, , :ceForm:tcmpnafportfoliodetails"
 														 actionListener="#{tcmpb.doAllocReset}"/>
+
+										<p:commandButton id="allocSaveButton" type="button" value="Save"
+														 styleClass="uob_button FRight">
+											<p:effect type="slide" event="click" for="fineTunePanel">
+												<f:param name="mode" value="'hide'" />
+											</p:effect>
+										</p:commandButton>
 									</div>
 								</div>
 
@@ -79,7 +79,38 @@
 							Based on the responses that you have given, we have selected the <strong>#{tcmpb.fixedModelName}</strong>
 							strategy for you.
 						</div>
-						<div class="EmptyBox70 ResEmptyBox30"></div>
+						<div class="EmptyBox20 ResEmptyBox30"></div>
+						<div class="Container10 Responsive0" style="height:1px;"></div>
+						<div class="Container80 Responsive100">
+							<div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
+								<div class="ContainerIndent">
+									<div class="EmptyBox5"></div>
+									<span class="Fs14 DispBlock gray">Investment Risk</span>
+                                    <span class="Fs24 DispBlock red">
+                                    <h:outputText value="#{tcmpb.totalRisk}">
+										<f:convertNumber pattern="##0.00%"/>
+									</h:outputText>
+                                   </span>
+
+									<div class="EmptyBox5"></div>
+								</div>
+							</div>
+							<div class="Wid10 Fright" style="height:1px;"></div>
+							<div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
+								<div class="ContainerIndent">
+									<div class="EmptyBox5"></div>
+									<span class="Fs14 DispBlock gray">Expected Return</span>
+                                    <span class="Fs24 DispBlock invessenceblue">
+                                      <h:outputText value="#{tcmpb.totalExpectedReturns}">
+										  <f:convertNumber pattern="##0.00%"/>
+									  </h:outputText>
+                                     </span>
+
+									<div class="EmptyBox5"></div>
+								</div>
+							</div>
+						</div>
+
 						<div class="Container100">
 							<p:outputPanel deferred="true">
 								<div class="Container50 Fleft spResPieBlock">
@@ -146,7 +177,7 @@
 
 									<div class="EmptyBox5"></div>
 								<span class="Fs17 DispBlock BBGreen"> <h:outputText id="tcmpnafavgperformance"
-										value="#{tcmpb.charts.chartdata.getIntChartData('AvgPerformance')}">
+																					value="#{tcmpb.charts.chartdata.getIntChartData('AvgPerformance')}">
 									<f:convertNumber pattern="$#,###,###,##0" />
 								</h:outputText>
 								</span>
@@ -161,7 +192,7 @@
 
 									<div class="EmptyBox5"></div>
 								<span class="Fs17 DispBlock BBGreen"> <h:outputText id="tcmpnafpoorperformance"
-										value="#{tcmpb.charts.chartdata.getIntChartData('PoorPerformance')}">
+																					value="#{tcmpb.charts.chartdata.getIntChartData('PoorPerformance')}">
 									<f:convertNumber pattern="$#,###,###,##0" />
 								</h:outputText>
 								</span>
@@ -219,7 +250,7 @@
 					</p:column>
 
 					<p:column priority="4" style="width:14%;"
-						styleClass="Fs12 TexAlLeft">
+							  styleClass="Fs12 TexAlLeft">
 						<f:facet name="header">
 							<h:outputText value="Class" />
 						</f:facet>
@@ -234,7 +265,7 @@
 					</p:column>
 
 					<p:column priority="2" style="width:15%;"
-						styleClass="Fs12 num-text-align TexAlRight">
+							  styleClass="Fs12 num-text-align TexAlRight">
 						<f:facet name="header">
 							<h:outputText value="Allocated" />
 						</f:facet>
@@ -251,7 +282,7 @@
 					</p:column>
 
 					<p:column priority="3" style="width:25%;"
-						styleClass="Fs12 TexAlLeft">
+							  styleClass="Fs12 TexAlLeft">
 						<f:facet name="header">
 							<h:outputText value="Name" />
 						</f:facet>
@@ -259,7 +290,7 @@
 					</p:column>
 
 					<p:column style="width:18%;"
-						styleClass="Fs12 num-text-align TexAlRight">
+							  styleClass="Fs12 num-text-align TexAlRight">
 						<f:facet name="header">
 							<h:outputText value="Value" />
 						</f:facet>
@@ -275,10 +306,10 @@
 							<p:column priority="3" />
 							<p:column priority="2" />
 							<p:column colspan="2" styleClass="Fs14 TexAlLeft FontBold"
-								footerText="Total">
+									  footerText="Total">
 							</p:column>
 							<p:column styleClass="Fs14 TexAlRight FontBold"
-								footerText="#{dataDisplayConverter.displayAsMoneyRounded(tcmpb.totalMoneyAllocated)}">
+									  footerText="#{dataDisplayConverter.displayAsMoneyRounded(tcmpb.totalMoneyAllocated)}">
 							</p:column>
 						</p:row>
 					</p:columnGroup>
