--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -8,7 +8,7 @@
     <div class="Wid30 Fleft LeftPanel">
         <div class="finetuneBtnBlock Fright">
             <p:commandButton type="button" styleClass="fineTuneBtn fineTuneBtnImg" id="uobfinetunebtn" icon="ui-icon-image">
-                <p:effect type="slide" event="click" for="finetune">
+                <p:effect type="slide" event="click" for="abc">
                     <f:param name="mode" value="'show'" />
                 </p:effect>
             </p:commandButton>
@@ -19,7 +19,7 @@
                 <span class="Fs30 mainHeaderUOB">Fine Tune Strategy</span>
                 <div class="Wid10 closeFTBtn Fright">
                     <p:commandButton type="button" styleClass="fineTuneBtn" id="uobftclose"  icon="fa fa-times">
-                        <p:effect type="slide" event="click" for="finetune">
+                        <p:effect type="slide" event="click" for="abc">
                             <f:param name="mode" value="'hide'" />
                         </p:effect>
                     </p:commandButton>
